fix classes de movieDetails

--- a/app/src/main/res/layout/tvshow_info.xml
+++ b/app/src/main/res/layout/tvshow_info.xml
@@ -50,6 +50,7 @@
                 android:layout_marginRight="@dimen/trade_size_dp_4"
                 android:layout_weight="1"
                 android:maxLines="1"
+                android:ellipsize="end"
                 app:layout_constraintEnd_toStartOf="@+id/lancamento"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/titulo_tvshow"
@@ -93,6 +94,9 @@
                 android:maxLength="30"
                 android:maxLines="1"
                 android:textStyle="bold"
+                android:ellipsize="end"
+                android:textColor="@color/primary"
+                android:text="@string/two_minus"
                 app:layout_constraintEnd_toStartOf="@+id/status"
                 app:layout_constraintStart_toEndOf="@+id/textView"
                 app:layout_constraintTop_toTopOf="@+id/textView"
@@ -274,6 +278,7 @@
                             android:gravity="end"
                             android:maxLines="1"
                             android:textSize="@dimen/trade_txt_size_sp_14"
+                            android:text="@string/nao_informado"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="1.0"
                             app:layout_constraintStart_toEndOf="@+id/country_producer_label"
@@ -361,7 +366,7 @@
                     android:id="@+id/seguir"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="0dp"
-                    android:layout_height="@dimen/trade_size_dp_42"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/trade_size_dp_8"
                     android:layout_marginEnd="@dimen/trade_size_dp_4"
                     android:layout_weight="1"
