--- a/app/src/main/res/layout/layout_notas.xml
+++ b/app/src/main/res/layout/layout_notas.xml
@@ -27,7 +27,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="@dimen/trade_size_dp_12" />
+            android:text="@string/two_minus"
+            android:textSize="12sp" />
 
 
     </LinearLayout>
@@ -54,7 +55,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="@dimen/trade_size_dp_12" />
+            android:text="@string/two_minus"
+            android:textSize="12sp" />
 
 
     </LinearLayout>
@@ -80,7 +82,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="@dimen/trade_size_dp_12" />
+            android:text="@string/two_minus"
+            android:textSize="12sp" />
 
     </LinearLayout>
 
@@ -103,7 +106,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="@dimen/trade_size_dp_12" />
+            android:text="@string/two_minus"
+            android:textSize="12sp" />
 
 
     </LinearLayout>
