alterado fonte da data de adapter da produtora

--- a/app/src/main/res/layout/adapter_produtora.xml
+++ b/app/src/main/res/layout/adapter_produtora.xml
@@ -43,7 +43,8 @@
             android:maxLines="2"
             android:textColor="@color/white"
             android:textSize="@dimen/trade_txt_size_sp_12"
-            android:typeface="serif"
+            android:textStyle="bold"
+            android:typeface="monospace"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
