--- a/app/src/main/res/layout/produtora_layout.xml
+++ b/app/src/main/res/layout/produtora_layout.xml
@@ -8,7 +8,6 @@
     android:background="@color/white"
     android:fitsSystemWindows="false">
 
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/produtora_filmes_recycler"
         android:layout_width="match_parent"
@@ -27,13 +26,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="false"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:elevation="0dp">
-
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+<!--        não funcionou o mexHeigth - Teste precisa ser feito com El Caminho    -->
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxHeight="200dp"
             android:fitsSystemWindows="true"
             app:contentScrim="@color/primary"
             app:collapsedTitleTextAppearance="@color/blue"
