--- a/app/src/main/res/layout/poster_main.xml
+++ b/app/src/main/res/layout/poster_main.xml
@@ -1,29 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_poster_main"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:minWidth="45dp"
-    android:cropToPadding="true"
-    android:scaleType="centerCrop"
     android:layout_gravity="center"
+    android:cropToPadding="true"
+    android:minWidth="45dp"
+    android:scaleType="centerCrop"
+    app:cardCornerRadius="3dp"
+    app:cardElevation="3dp"
+    app:cardBackgroundColor="@color/primary"
     app:cardPreventCornerOverlap="true"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="true"
+    app:contentPadding="3dp">
 
 
     <ImageView
         android:id="@+id/img_poster_grid"
         android:layout_width="wrap_content"
-        android:minWidth="90dp"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:layout_margin="@dimen/trade_size_dp_2"
         android:adjustViewBounds="true"
-        android:background="@color/accent"
         android:cropToPadding="true"
+        android:minWidth="90dp"
         android:scaleType="centerCrop"
         tools:srcCompat="@tools:sample/avatars" />
 
