--- a/app/src/main/res/layout/seguindo_tvshow.xml
+++ b/app/src/main/res/layout/seguindo_tvshow.xml
@@ -3,9 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/CardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:focusable="false"
+    android:importantForAccessibility="no"
     android:layout_margin="@dimen/trade_size_dp_2"
     app:cardElevation="@dimen/trade_size_dp_3">
 
@@ -22,20 +23,18 @@
 
     <ImageView
         android:id="@+id/seguindo_circulo"
-        android:background="@drawable/circle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/trade_size_dp_10"
-        android:layout_marginLeft="@dimen/trade_size_dp_10"
-        android:layout_marginTop="@dimen/trade_size_dp_10" />
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:background="@drawable/update"
+        android:importantForAccessibility="no" />
 
     <TextView
         android:id="@+id/seguindo_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
+        tools:text="dieadieadmaeidam"
         android:background="@color/transparent2"
-        android:textAlignment="center"
         android:visibility="gone" />
 
 </androidx.cardview.widget.CardView>
