--- a/app/src/main/res/layout/calendar_adapter.xml
+++ b/app/src/main/res/layout/calendar_adapter.xml
@@ -14,17 +14,19 @@
         android:layout_height="wrap_content"
         android:minHeight="@dimen/trade_size_dp_110"
         android:orientation="horizontal"
-        android:padding="@dimen/trade_size_dp_6">
+        android:padding="@dimen/trade_size_dp_3">
 
         <ImageView
             android:id="@+id/poster"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
+            android:layout_marginStart="1dp"
             android:adjustViewBounds="true"
             android:cropToPadding="true"
             android:scaleType="fitCenter"
             android:src="@drawable/poster_empty"
+            android:focusable="false"
+            android:importantForAccessibility="no"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -52,7 +54,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginTop="2dp"
             android:textColor="@color/accent"
             android:textStyle="bold"
