--- a/app/src/main/res/layout/seguindo_tvshow.xml
+++ b/app/src/main/res/layout/seguindo_tvshow.xml
@@ -11,7 +11,7 @@
     app:cardElevation="@dimen/trade_size_dp_3">
 
     <ImageView
-        android:id="@+id/seguindo_imageView"
+        android:id="@+id/follow_poster"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -19,17 +19,19 @@
         android:cropToPadding="true"
         android:scaleType="centerCrop"
         android:src="@drawable/poster_empty"
+        tools:ignore="ContentDescription"
         tools:scaleType="fitXY" />
 
     <ImageView
-        android:id="@+id/seguindo_circulo"
+        android:id="@+id/follow_update"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:background="@drawable/update"
+        android:visibility="gone"
         android:importantForAccessibility="no" />
 
     <TextView
-        android:id="@+id/seguindo_title"
+        android:id="@+id/follow_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
