--- a/app/src/main/res/layout/scroll_similares.xml
+++ b/app/src/main/res/layout/scroll_similares.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scroll_similares_linear"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:clickable="true"
-    android:foreground="?attr/selectableItemBackground"
     android:orientation="vertical"
     android:padding="@dimen/trade_size_dp_2"
     android:weightSum="1">
@@ -19,6 +18,7 @@
             android:layout_width="match_parent"
             android:adjustViewBounds="false"
             android:layout_height="match_parent"
+            tools:src="@drawable/poster_empty"
             android:foregroundGravity="center_vertical"
             android:scaleType="centerCrop" />
 
@@ -38,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="top|center_horizontal"
+        tools:text="Um filme ai"
         android:maxLength="14"
         android:maxLines="2" />
 
