--- a/app/src/main/res/layout/poster_main.xml
+++ b/app/src/main/res/layout/poster_main.xml
@@ -8,6 +8,7 @@
     android:layout_gravity="center"
     android:cropToPadding="true"
     android:minWidth="45dp"
+    android:minHeight="110dp"
     android:scaleType="centerCrop"
     app:cardCornerRadius="3dp"
     app:cardElevation="3dp"
