--- a/app/src/main/res/layout/scroll_similares.xml
+++ b/app/src/main/res/layout/scroll_similares.xml
@@ -1,45 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scroll_similares_linear"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="@dimen/trade_size_dp_2"
     android:weightSum="1">
 
-    <FrameLayout
-        android:layout_width="@dimen/trade_size_dp_100"
-        android:layout_height="@dimen/trade_size_dp_140">
-
-
-        <ImageView
-            android:id="@+id/imgPagerSimilares"
-            android:layout_width="match_parent"
-            android:adjustViewBounds="false"
-            android:layout_height="match_parent"
-            tools:src="@drawable/poster_empty"
-            android:foregroundGravity="center_vertical"
-            android:scaleType="centerCrop" />
-
-        <ProgressBar
-            android:id="@+id/progressBarSimilares"
-            style="@android:style/Widget.DeviceDefault.ProgressBar.Small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:indeterminate="false" />
-
-    </FrameLayout>
-
-    <TextView
-        android:id="@+id/textSimilaresName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="top|center_horizontal"
-        tools:text="Um filme ai"
-        android:maxLength="14"
-        android:maxLines="2" />
+    <include layout="@layout/poster_main" />
 
 </LinearLayout>
