criado bottomSheet para streams

--- a/app/src/main/res/layout/activity_filme.xml
+++ b/app/src/main/res/layout/activity_filme.xml
@@ -77,6 +77,8 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
+        <include layout="@layout/bottom_streaming" />
+
         <include
             layout="@layout/fab_float"
             android:visibility="visible" />
