--- a/app/src/main/res/layout/sobre.xml
+++ b/app/src/main/res/layout/sobre.xml
@@ -48,7 +48,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/google_play" />
+            android:src="@drawable/googleplay" />
 
         <TextView
             android:layout_width="match_parent"
