--- a/app/src/main/res/layout/sources_item_layout.xml
+++ b/app/src/main/res/layout/sources_item_layout.xml
@@ -39,7 +39,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/starz" />
+        tools:src="@drawable/hulu" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
