criado link para o app Netflix

--- a/app/src/main/res/layout/sources_item_layout.xml
+++ b/app/src/main/res/layout/sources_item_layout.xml
@@ -12,6 +12,8 @@
         android:gravity="center"
         android:textColor="@color/primary"
         android:textStyle="bold"
+        android:visibility="gone"
+        tools:visibility="visible"
         app:layout_constraintEnd_toStartOf="@id/source_hd"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +27,8 @@
         android:gravity="center"
         android:textColor="@color/accent"
         android:textStyle="bold"
+        android:visibility="gone"
+        tools:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/source_sd"
