--- a/app/src/main/res/layout/fab_float.xml
+++ b/app/src/main/res/layout/fab_float.xml
@@ -6,11 +6,10 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="bottom|end"
-    android:layout_marginBottom="@dimen/trade_size_dp_6"
-    android:layout_marginRight="@dimen/trade_size_dp_6"
+    android:layout_marginEnd="@dimen/trade_size_dp_6"
+    android:layout_marginBottom="@dimen/trade_size_dp_35"
     android:alpha="0"
     android:visibility="visible">
-
 
     <com.github.clans.fab.FloatingActionButton
         android:id="@+id/menu_item_favorite"
