--- a/app/src/main/res/drawable/stream_customview.xml
+++ b/app/src/main/res/drawable/stream_customview.xml
@@ -3,6 +3,8 @@
     android:shape="rectangle">
     <corners
         android:topLeftRadius="@dimen/trade_size_dp_12"
+        android:bottomLeftRadius="0dp"
+        android:bottomRightRadius="0dp"
         android:topRightRadius="@dimen/trade_size_dp_12" />
     <solid android:color="@color/white" />
     <stroke
