--- a/app/src/main/res/layout/bottom_streaming.xml
+++ b/app/src/main/res/layout/bottom_streaming.xml
@@ -2,13 +2,25 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/conteiner_stream"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/stream_customview"
     android:clickable="false"
-    app:behavior_peekHeight="30dp"
+    app:behavior_peekHeight="0dp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
-    tools:showIn="@layout/activity_filme">
+    tools:showIn="@layout/activity_movie">
+
+    <ImageView
+        android:id="@+id/stream_error_sad"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/trade_size_dp_150"
+        android:src="@drawable/sad"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title_streaming"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/title_streaming"
@@ -32,15 +44,16 @@
         android:background="@color/transparent2"
         android:fontFamily="sans-serif-condensed"
         android:gravity="center"
-        android:text="Stream"
+        android:text="@string/stream"
         android:textColor="@color/black"
         android:textSize="@dimen/trade_txt_size_sp_16"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@+id/label_rent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_streaming" />
-
+        app:layout_constraintTop_toBottomOf="@+id/title_streaming"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/label_rent"
@@ -49,14 +62,16 @@
         android:background="@color/transparent2"
         android:fontFamily="sans-serif-condensed"
         android:gravity="center"
-        android:text="Alugar"
+        android:text="@string/rent"
         android:textColor="@color/black"
         android:textSize="@dimen/trade_txt_size_sp_16"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@+id/label_bay"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/label_stream"
-        app:layout_constraintTop_toBottomOf="@+id/title_streaming" />
+        app:layout_constraintTop_toBottomOf="@+id/title_streaming"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/label_bay"
@@ -65,14 +80,16 @@
         android:background="@color/transparent2"
         android:fontFamily="sans-serif-condensed"
         android:gravity="center"
-        android:text="Comprar"
+        android:text="@string/purchase"
         android:textColor="@color/black"
         android:textSize="@dimen/trade_txt_size_sp_16"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/label_rent"
-        app:layout_constraintTop_toBottomOf="@+id/title_streaming" />
+        app:layout_constraintTop_toBottomOf="@+id/title_streaming"
+        tools:visibility="visible" />
 
     <View
         android:id="@+id/open_bar"
@@ -85,41 +102,59 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/group_types_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="label_bay, label_rent, label_stream" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/group_recycler_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="rcRent, rcStream, rcBay" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcRent"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hapticFeedbackEnabled="true"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@id/label_rent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/label_rent"
         app:layout_constraintStart_toStartOf="@id/label_rent"
         app:layout_constraintTop_toBottomOf="@id/label_rent"
         tools:itemCount="1"
-        tools:listitem="@layout/sources_item_layout" />
+        tools:listitem="@layout/sources_item_layout"
+        tools:visibility="gone" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcStream"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hapticFeedbackEnabled="true"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/label_stream"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@id/label_stream"
         app:layout_constraintTop_toBottomOf="@id/label_stream"
         tools:itemCount="1"
-        tools:listitem="@layout/sources_item_layout" />
+        tools:listitem="@layout/sources_item_layout"
+        tools:visibility="gone" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcBay"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hapticFeedbackEnabled="true"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@id/label_bay"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@id/label_bay"
         app:layout_constraintTop_toBottomOf="@id/label_bay"
         tools:itemCount="1"
-        tools:listitem="@layout/sources_item_layout" />
+        tools:listitem="@layout/sources_item_layout"
+        tools:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
