removido click na view em baixo do bottomsheet

--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -87,6 +87,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+            android:clickable="true"
+            android:focusable="true"
             app:behavior_peekHeight="0dp"
             app:title_streaming="@string/stream_avaliable"
             app:errorImg="@drawable/sad"
