--- a/app/src/main/res/layout/bottom_streaming.xml
+++ b/app/src/main/res/layout/bottom_streaming.xml
@@ -22,6 +22,17 @@
         tools:visibility="visible" />
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:text="@string/beta"
+        android:textColor="@color/black_transparente_produtora"
+        android:textSize="8sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SmallSp" />
+
+    <TextView
         android:id="@+id/title_streaming"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
