--- a/app/src/main/res/layout/scroll_similares.xml
+++ b/app/src/main/res/layout/scroll_similares.xml
@@ -3,8 +3,7 @@
     android:id="@+id/scroll_similares_linear"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:weightSum="1">
+    android:orientation="vertical">
 
     <include layout="@layout/poster_main" />
 
