--- a/app/src/main/res/layout/adapter_similares.xml
+++ b/app/src/main/res/layout/adapter_similares.xml
@@ -16,15 +16,15 @@
             android:id="@+id/img_similares"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            android:layout_gravity="center"
             android:adjustViewBounds="true"
-            android:cropToPadding="true"
+            android:minWidth="90dp"
+            android:src="@drawable/poster_empty"
             android:scaleType="centerCrop" />
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/trade_size_dp_10"
             android:layout_marginStart="@dimen/trade_size_dp_10"
             android:layout_weight="0.75"
             android:orientation="vertical">
@@ -70,7 +70,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/trade_size_dp_2"
                     android:layout_marginStart="@dimen/trade_size_dp_2" />
             </LinearLayout>
 
