--- a/app/src/main/res/layout/bottom_streaming.xml
+++ b/app/src/main/res/layout/bottom_streaming.xml
@@ -33,6 +33,17 @@
         tools:ignore="SmallSp" />
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:text="@string/valid_us"
+        android:textColor="@color/black_transparente_produtora"
+        android:textSize="8sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SmallSp" />
+
+    <TextView
         android:id="@+id/title_streaming"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
