--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -57,6 +57,12 @@
                 app:contentScrim="@android:drawable/screen_background_light_transparent"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_collapseMode="pin"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
                 <androidx.viewpager.widget.ViewPager
                     android:id="@+id/top_img_viewpager"
@@ -65,13 +71,6 @@
                     android:layout_gravity="bottom|start"
                     android:background="@android:drawable/screen_background_light_transparent"
                     app:layout_collapseMode="parallax" />
-
-                <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    app:layout_collapseMode="pin"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -85,16 +84,16 @@
             android:id="@+id/streamview_movie"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
             android:clickable="true"
             android:focusable="true"
-            app:behavior_peekHeight="400dp"
+            app:behavior_peekHeight="0dp"
             app:behavior_hideable="true"
-            app:title_streaming="@string/stream_avaliable"
             app:errorImg="@drawable/sad"
             app:label_bay="@string/purchase"
             app:label_rent="@string/rent"
-            app:label_stream="@string/stream" />
+            app:label_stream="@string/stream"
+            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+            app:title_streaming="@string/stream_avaliable" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
