--- a/app/src/main/res/layout/tvshow_info.xml
+++ b/app/src/main/res/layout/tvshow_info.xml
@@ -29,6 +29,7 @@
                 android:lines="2"
                 android:maxLines="2"
                 android:minLines="1"
+                android:textColor="@color/black"
                 android:paddingStart="@dimen/trade_size_dp_4"
                 android:paddingEnd="@dimen/trade_size_dp_4"
                 android:textSize="@dimen/trade_txt_size_sp_20"
@@ -62,6 +63,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="@dimen/trade_size_dp_4"
+                android:textColor="@color/black"
                 android:gravity="end"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -125,6 +127,7 @@
                 android:layout_marginStart="@dimen/trade_size_dp_8"
                 android:layout_marginEnd="@dimen/trade_size_dp_8"
                 app:layout_constraintEnd_toEndOf="parent"
+                android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/group_information"
                 tools:text="Em Uma terra desconhecida Em Uma terra desconhecida Em Uma terra desconhecida Em Uma terra desconhecida Em Uma terra desconhecida Em Uma terra desconhecida Em Uma terra desconhecida Em Uma terra desconhecida Em Uma terra desconhecida Em Uma terra desconhecida Em Uma terra desconhecida Em Uma terra desconhecida " />
